<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chooseVehicleSection">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/refuel_Vehicle"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/vehicleNameSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textRefuelMileage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/refuel_mileage"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editRefuelMileage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:textAppearance="@style/TextAppearance.AppCompat" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/DateTimeSection">

        <TextView
            android:text="@string/refuel_Date_Time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textRefuelTime"
            android:layout_weight="1"
            android:textSize="18sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textCurrentTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="TextView" />

            <Button
                android:id="@+id/buttonSetTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="clickTime"
                android:text="@string/set_Time" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/OilSelectSection">

        <TextView
            android:text="@string/oil_Select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textOilSelect"
            android:textSize="18sp"
            android:layout_weight="1" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/OilProvider">

            <RadioButton
                android:id="@+id/radioButtonCPC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/CPC" />

            <RadioButton
                android:id="@+id/radioButtonFPCC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/FPCC" />

        </RadioGroup>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/OilType">

            <RadioButton
                android:id="@+id/radioButton92"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/oil_92"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/radioButton95"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/oil_95" />

            <RadioButton
                android:id="@+id/radioButton98"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/oil_98" />

            <RadioButton
                android:id="@+id/radioButtonDiesel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/diesel" />


        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:id="@+id/AutoOrCustom">

            <RadioButton
                android:id="@+id/radioAuto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/auto_get" />

            <RadioButton
                android:id="@+id/radioCustom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/custom_Price" />

            <EditText
                android:id="@+id/editCustom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAppearance="@style/TextAppearance.AppCompat" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/RefuelVolumeSection">

        <TextView
            android:id="@+id/textRefuelVolume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/refuel_Volume"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editRefuelVolume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAppearance="@style/TextAppearance.AppCompat" />



    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/TotalSection">

        <TextView
            android:id="@+id/textTotal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total_Price"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTotal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:textAppearance="@style/TextAppearance.AppCompat" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ExplanationSection"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textExplanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/refuel_Explanation"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkButtonSection">

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="clickCancel"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="clickOK"
            android:text="@android:string/ok" />
    </LinearLayout>


</LinearLayout>
